[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msrDynamics"
version = "0.1.0"
description = "Python API to JiTCDDE for neutronic and thermal hydraulic systems"
readme = "README.md"
authors = [{ name = "Luke Labrie-Cleary", email = "lplcleary@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
]
dependencies = [
    "jitcdde",
    "numpy",
    "chspy"
]
requires-python = ">=3.6"

